force-app/main/default/objects/Contact/fields/Individual_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Individual_Response_Code__c</fullName>
    <label>Individual Response Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Success</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Review</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Failed</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Technical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>