force-app/main/default/objects/Contact/fields/Individual_Response_Description__c.field-meta.xml
<CustomField>
    <fullName>Individual_Response_Description__c</fullName>
    <label>Individual Response Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>