force-app/main/default/objects/Contact/fields/Individual_Response_Error__c.field-meta.xml
<CustomField>
    <fullName>Individual_Response_Error__c</fullName>
    <label>Individual Response Error</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>