force-app/main/default/objects/Contact/fields/Initial_Setup_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Initial_Setup_Date_Time__c</fullName>
    <label>Initial Setup Date Time</label>
    <type>DateTime</type>
</CustomField>