force-app/main/default/objects/Contact/fields/Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Owner</label>
    <type>Checkbox</type>
</CustomField>