force-app/main/default/objects/Contact/fields/IsPublic__c.field-meta.xml
<CustomField>
    <fullName>IsPublic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if a Buyer is has a Private or Business account</description>
    <label>IsPublic</label>
    <type>Checkbox</type>
</CustomField>