force-app/main/default/objects/Contact/fields/Job_Title_Code__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_Code__c</fullName>
    <label>Job Title Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BRKR</fullName>
            </value>
            <value>
                <fullName>EMPL</fullName>
            </value>
            <value>
                <fullName>OWNR</fullName>
            </value>
            <value>
                <fullName>PTNR</fullName>
            </value>
            <value>
                <fullName>TOWR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>