force-app/main/default/objects/Contact/fields/KAR_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>KAR_Account_ID__c</fullName>
    <description>KAR Account Salesforce ID</description>
    <externalId>true</externalId>
    <label>KAR Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>