force-app/main/default/objects/Contact/fields/Login_Email__c.field-meta.xml
<CustomField>
    <fullName>Login_Email__c</fullName>
    <label>Login Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>