force-app/main/default/objects/Contact/fields/Loyalty__c.field-meta.xml
<CustomField>
    <fullName>Loyalty__c</fullName>
    <inlineHelpText>Based on 100 Day Deck</inlineHelpText>
    <label>Loyalty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessible</fullName>
            </value>
            <value>
                <fullName>Truly Loyal</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Trapped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>