force-app/main/default/objects/Contact/fields/medallia_xm__Completed_Survey_Count__c.field-meta.xml
<CustomField>
    <fullName>medallia_xm__Completed_Survey_Count__c</fullName>
    <description># of completed surveys</description>
    <inlineHelpText># of completed surveys</inlineHelpText>
    <label>Completed Survey Count</label>
    <summaryForeignKey>medallia_xm__Medallia_Feedback__c.medallia_xm__Contact_Id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>