force-app/main/default/objects/Contact/fields/medallia_xm__Detractor_Count__c.field-meta.xml
<CustomField>
    <fullName>medallia_xm__Detractor_Count__c</fullName>
    <description>Count of anyone who scores experience is less than 6</description>
    <inlineHelpText>Count of anyone who scores experience is less than 6</inlineHelpText>
    <label>Detractor Count</label>
    <summaryFilterItems>
        <field>medallia_xm__Medallia_Feedback__c.medallia_xm__Response_Main_score__c</field>
        <operation>lessThan</operation>
        <value>6</value>
    </summaryFilterItems>
    <summaryForeignKey>medallia_xm__Medallia_Feedback__c.medallia_xm__Contact_Id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>