force-app/main/default/objects/Contact/fields/medallia_xm__Promoter_Count__c.field-meta.xml
<CustomField>
    <fullName>medallia_xm__Promoter_Count__c</fullName>
    <description>Promoter is anyone who scores experience as 9 or 10</description>
    <inlineHelpText>Promoter is anyone who scores experience as 9 or 10</inlineHelpText>
    <label>Promoter Count</label>
    <summaryFilterItems>
        <field>medallia_xm__Medallia_Feedback__c.medallia_xm__Response_Main_score__c</field>
        <operation>greaterOrEqual</operation>
        <value>9</value>
    </summaryFilterItems>
    <summaryForeignKey>medallia_xm__Medallia_Feedback__c.medallia_xm__Contact_Id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>