force-app/main/default/objects/Contact/fields/medallia_xm__Sum_of_Scores__c.field-meta.xml
<CustomField>
    <fullName>medallia_xm__Sum_of_Scores__c</fullName>
    <description>Sum of all scores</description>
    <inlineHelpText>Sum of all scores</inlineHelpText>
    <label>Sum of Scores</label>
    <summarizedField>medallia_xm__Medallia_Feedback__c.medallia_xm__Response_Main_score__c</summarizedField>
    <summaryForeignKey>medallia_xm__Medallia_Feedback__c.medallia_xm__Contact_Id__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>