force-app/main/default/objects/Contact/fields/Mobile_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Number__c</fullName>
    <label>Mobile_Phone_Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>