force-app/main/default/objects/Contact/fields/Name_of_Credit_Line__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Credit_Line__c</fullName>
    <inlineHelpText>Finance companies used</inlineHelpText>
    <label>Name of Credit Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFC</fullName>
            </value>
            <value>
                <fullName>Nextgear</fullName>
            </value>
            <value>
                <fullName>Westlake</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>