force-app/main/default/objects/Contact/fields/Passcode__c.field-meta.xml
<CustomField>
    <fullName>Passcode__c</fullName>
    <label>Passcode</label>
    <length>9</length>
    <type>Text</type>
</CustomField>