force-app/main/default/objects/Contact/fields/Payment_Methods_Used__c.field-meta.xml
<CustomField>
    <fullName>Payment_Methods_Used__c</fullName>
    <inlineHelpText>What ways does the buyer pay for vehicles</inlineHelpText>
    <label>Payment Methods Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>I-Pay</fullName>
            </value>
            <value>
                <fullName>Credit/Debit Card</fullName>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Money Order/Cashier&apos;s Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>