force-app/main/default/objects/Contact/fields/Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Phone_1__c</fullName>
    <label>Phone 1#</label>
    <length>20</length>
    <type>Text</type>
</CustomField>