force-app/main/default/objects/Contact/fields/Phone_1_Ext__c.field-meta.xml
<CustomField>
    <fullName>Phone_1_Ext__c</fullName>
    <label>Phone 1 Ext #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>