force-app/main/default/objects/Contact/fields/Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Phone_2__c</fullName>
    <label>Phone 2#</label>
    <length>20</length>
    <type>Text</type>
</CustomField>