force-app/main/default/objects/Contact/fields/Phone_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type_2__c</fullName>
    <label>Phone Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPNT</fullName>
                <label>Cell Phone</label>
            </value>
            <value>
                <fullName>CPWT</fullName>
                <label>Cell Phone with Text</label>
            </value>
            <value>
                <fullName>HMPN</fullName>
                <label>Home Phone</label>
            </value>
            <value>
                <fullName>WKPN</fullName>
                <label>Work Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>