force-app/main/default/objects/Contact/fields/Postal_Code_Owner__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_Owner__c</fullName>
    <description>POSTAL CODE OWNER</description>
    <label>Postal Code Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>