force-app/main/default/objects/Contact/fields/Prefered_Language__c.field-meta.xml
<CustomField>
    <fullName>Prefered_Language__c</fullName>
    <label>Prefered Language</label>
    <length>25</length>
    <type>Text</type>
</CustomField>