force-app/main/default/objects/Contact/fields/Preferred_Auction_Type__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Auction_Type__c</fullName>
    <inlineHelpText>Preferred type of auctions</inlineHelpText>
    <label>Preferred Auction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live Auction</fullName>
            </value>
            <value>
                <fullName>Buy Now</fullName>
            </value>
            <value>
                <fullName>Timed Auction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>