force-app/main/default/objects/Contact/fields/Preferred_Contact_Channel__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Channel__c</fullName>
    <inlineHelpText>How contact prefers to be contacted</inlineHelpText>
    <label>Preferred Contact Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>