force-app/main/default/objects/Contact/fields/Prereg_ID_Country_Issued__c.field-meta.xml
<CustomField>
    <fullName>Prereg_ID_Country_Issued__c</fullName>
    <label>Country Issued</label>
    <length>255</length>
    <type>Text</type>
</CustomField>