force-app/main/default/objects/Contact/fields/Primary_Contact_Method_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Method_Code__c</fullName>
    <label>Primary_Contact_Method_Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>