force-app/main/default/objects/Contact/fields/Promo_codes_used__c.field-meta.xml
<CustomField>
    <fullName>Promo_codes_used__c</fullName>
    <inlineHelpText>Promo codes used by contact</inlineHelpText>
    <label>Promo codes used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>