force-app/main/default/objects/Contact/fields/PROV_Owner__c.field-meta.xml
<CustomField>
    <fullName>PROV_Owner__c</fullName>
    <label>PROV Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>