force-app/main/default/objects/Contact/fields/Provider_Specific_Publications__c.field-meta.xml
<CustomField>
    <fullName>Provider_Specific_Publications__c</fullName>
    <inlineHelpText>Publications to “subscribe” to.</inlineHelpText>
    <label>Provider Specific Publications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEMA</fullName>
            </value>
            <value>
                <fullName>ILS</fullName>
            </value>
            <value>
                <fullName>Catastrophe Updates</fullName>
            </value>
            <value>
                <fullName>Legislative Updates</fullName>
            </value>
            <value>
                <fullName>Industry Reports, Articles &amp; Newsletters</fullName>
            </value>
            <value>
                <fullName>Commercial-Specific Publications</fullName>
            </value>
            <value>
                <fullName>Dealer-Specific Publications</fullName>
            </value>
            <value>
                <fullName>Specialty-Specific Publications</fullName>
            </value>
            <value>
                <fullName>Insurance-Specific Publications</fullName>
            </value>
            <value>
                <fullName>VPS/Cash for Cars-Specific Publications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>