force-app/main/default/objects/Contact/fields/Registration_Effective_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Registration_Effective_Date_Time__c</fullName>
    <label>Registration Effective Date Time</label>
    <type>DateTime</type>
</CustomField>