force-app/main/default/objects/Contact/fields/Registration_Expiration_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Registration_Expiration_Date_Time__c</fullName>
    <label>Registration Expiration Date Time</label>
    <type>DateTime</type>
</CustomField>