force-app/main/default/objects/Contact/fields/Registration_Pending__c.field-meta.xml
<CustomField>
    <fullName>Registration_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration Pending</label>
    <type>Checkbox</type>
</CustomField>