force-app/main/default/objects/Contact/fields/Registration_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Reminder_Date__c</fullName>
    <label>Registration Reminder Date</label>
    <type>DateTime</type>
</CustomField>