force-app/main/default/objects/Contact/fields/Registration_Renewal_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Registration_Renewal_Date_Time__c</fullName>
    <label>Registration Renewal Date Time</label>
    <type>DateTime</type>
</CustomField>