force-app/main/default/objects/Contact/fields/Role_in_Company__c.field-meta.xml
<CustomField>
    <fullName>Role_in_Company__c</fullName>
    <label>Role in Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4-Star-Owner</fullName>
            </value>
            <value>
                <fullName>3-Star-Decision Maker</fullName>
            </value>
            <value>
                <fullName>2-Star-Influencer</fullName>
            </value>
            <value>
                <fullName>1-Star-Gate Keeper</fullName>
                <default>true</default>
                <label>1-Star-Gate Keeper</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>