force-app/main/default/objects/Contact/fields/Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction__c</fullName>
    <inlineHelpText>Buyers Current Satisfaction Level</inlineHelpText>
    <label>Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Unsatisfied</fullName>
            </value>
            <value>
                <fullName>Unsatisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>