force-app/main/default/objects/Contact/fields/Sentiment_of_IAA__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_of_IAA__c</fullName>
    <label>Sentiment (of IAA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negative (-1)</fullName>
            </value>
            <value>
                <fullName>Neutral (0)</fullName>
            </value>
            <value>
                <fullName>Positive (1)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>