force-app/main/default/objects/Contact/fields/Social_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Social_Accounts__c</fullName>
    <inlineHelpText>List of social media accounts</inlineHelpText>
    <label>Social Accounts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>