force-app/main/default/objects/Contact/fields/Stock_Number__c.field-meta.xml
<CustomField>
    <fullName>Stock_Number__c</fullName>
    <label>Stock Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>