force-app/main/default/objects/Contact/fields/Street_1_Owner__c.field-meta.xml
<CustomField>
    <fullName>Street_1_Owner__c</fullName>
    <label>Street 1 Owner</label>
    <type>TextArea</type>
</CustomField>