force-app/main/default/objects/Contact/fields/Street_2_Owner__c.field-meta.xml
<CustomField>
    <fullName>Street_2_Owner__c</fullName>
    <label>Street 2 Owner</label>
    <type>TextArea</type>
</CustomField>