force-app/main/default/objects/Contact/fields/Sync_Buyer_With_MC__c.field-meta.xml
<CustomField>
    <fullName>Sync_Buyer_With_MC__c</fullName>
    <formula>IF(AND(Email != NULL, Buyer_Employee_ID__c != NULL, TEXT(Account.Buyer_Status__c) = &apos;ACT&apos;), TRUE,
IF(AND(Email != NULL, Buyer_Employee_ID__c != NULL, TEXT(Account.Buyer_Status__c ) = &apos;NEW&apos;), TRUE,
IF(AND(Email != NULL, TEXT(Account.Buyer_Status__c ) = &apos;0&apos;), TRUE,
FALSE)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sync Buyer With MC</label>
    <type>Checkbox</type>
</CustomField>