force-app/main/default/objects/Contact/fields/Temp_Password_Reset__c.field-meta.xml
<CustomField>
    <fullName>Temp_Password_Reset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp Password Reset</label>
    <type>Checkbox</type>
</CustomField>