force-app/main/default/objects/Contact/fields/Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms and Conditions</label>
    <type>Checkbox</type>
</CustomField>