force-app/main/default/objects/Contact/fields/updateBy_Process_Builder__c.field-meta.xml
<CustomField>
    <fullName>updateBy_Process_Builder__c</fullName>
    <label>updateBy Process Builder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>