force-app/main/default/objects/Contact/fields/Vehicle_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Preferences__c</fullName>
    <inlineHelpText>The types of vehicles they prefer (salvage, clean title, specialty, powersport, etc)</inlineHelpText>
    <label>Vehicle Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clean</fullName>
            </value>
            <value>
                <fullName>Title</fullName>
            </value>
            <value>
                <fullName>Salvage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>