force-app/main/default/objects/Contact/fields/VPE_Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>VPE_Partner_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VPE Partner Contact</label>
    <type>Checkbox</type>
</CustomField>