force-app/main/default/objects/Contact/fields/Who_s_their_Customer__c.field-meta.xml
<CustomField>
    <fullName>Who_s_their_Customer__c</fullName>
    <label>Who&apos;s their Customer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Dismantler</fullName>
            </value>
            <value>
                <fullName>Scrapper</fullName>
            </value>
            <value>
                <fullName>Exporter</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Body Shops</fullName>
                <isActive>false</isActive>
                <label>Body Shops</label>
            </value>
            <value>
                <fullName>Insurance Companies</fullName>
                <isActive>false</isActive>
                <label>Insurance Companies</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>