force-app/main/default/objects/Contact/recordTypes/ASAP_RPM_Contact.recordType-meta.xml
<RecordType>
    <fullName>ASAP_RPM_Contact</fullName>
    <active>true</active>
    <label>ASAP RPM Contact</label>
</RecordType>