force-app/main/default/objects/Contact/recordTypes/Broker_Employee.recordType-meta.xml
<RecordType>
    <fullName>Broker_Employee</fullName>
    <active>true</active>
    <label>Broker Employee</label>
</RecordType>