force-app/main/default/objects/Contact/recordTypes/Buyer_Employees.recordType-meta.xml
<RecordType>
    <fullName>Buyer_Employees</fullName>
    <active>true</active>
    <label>Buyer Employees</label>
</RecordType>