force-app/main/default/objects/Contact/recordTypes/DDI.recordType-meta.xml
<RecordType>
    <fullName>DDI</fullName>
    <active>true</active>
    <label>DDI</label>
</RecordType>