force-app/main/default/objects/Contact/recordTypes/Exporter.recordType-meta.xml
<RecordType>
    <fullName>Exporter</fullName>
    <active>true</active>
    <label>Exporter</label>
</RecordType>