force-app/main/default/objects/Contact/recordTypes/IAA_CAN.recordType-meta.xml
<RecordType>
    <fullName>IAA_CAN</fullName>
    <active>true</active>
    <label>IAA CAN</label>
</RecordType>