force-app/main/default/objects/Contact/recordTypes/IAA_Contact.recordType-meta.xml
<RecordType>
    <fullName>IAA_Contact</fullName>
    <active>true</active>
    <label>IAA Contact</label>
</RecordType>