force-app/main/default/objects/Contact/recordTypes/IAA_Employee.recordType-meta.xml
<RecordType>
    <fullName>IAA_Employee</fullName>
    <active>true</active>
    <label>IAA Employee</label>
</RecordType>