force-app/main/default/objects/Contact/recordTypes/IAA_UK.recordType-meta.xml
<RecordType>
    <fullName>IAA_UK</fullName>
    <active>true</active>
    <label>IAA UK</label>
</RecordType>