force-app/main/default/objects/Contact/recordTypes/KAR_BS_Contact.recordType-meta.xml
<RecordType>
    <fullName>KAR_BS_Contact</fullName>
    <active>false</active>
    <label>KAR BS Contact</label>
</RecordType>