force-app/main/default/objects/Contact/recordTypes/Prospect_Buyer.recordType-meta.xml
<RecordType>
    <fullName>Prospect_Buyer</fullName>
    <active>true</active>
    <label>Prospect Buyer</label>
</RecordType>