force-app/main/default/objects/Contact/recordTypes/Recycler.recordType-meta.xml
<RecordType>
    <fullName>Recycler</fullName>
    <active>true</active>
    <label>Recycler</label>
</RecordType>