force-app/main/default/objects/Contact/validationRules/Birthdate_cannot_be_less_18.validationRule-meta.xml
<ValidationRule>
    <fullName>Birthdate_cannot_be_less_18</fullName>
    <active>false</active>
    <description>Employees must be 18 years old to do businses with IAA</description>
    <errorConditionFormula>ADDMONTHS(Birthdate, 216) &gt; TODAY()
&amp;&amp;
RecordType.Name = &quot;Buyer Employees&quot;</errorConditionFormula>
    <errorDisplayField>Birthdate</errorDisplayField>
    <errorMessage>Employees must be 18 years old to do businses with IAA</errorMessage>
</ValidationRule>